fix footer overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,6 @@ header {
 	padding-bottom: 0;
 }
 header h1 {
-	font-family: 'Courier New', Courier, monospace;
 	font-size: 3rem;
 }
 nav ul {
@@ -265,6 +264,9 @@ footer p {
 		padding-left: 0.5rem;
 		padding-right: 0.5rem;
 	}
+	header h1 {
+		font-size: 2rem;
+	}
 	nav ul li {
 		margin-top: 0.8rem;
 	}
@@ -273,6 +275,8 @@ footer p {
 		margin-left: 0;
 		margin-right: 0;
 		padding: 0;
+		border-right: 0;
+		border-left: 0;
 	}
 	footer p {
 		padding-left: 0.5rem;
